[project]
name = "matcha-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "conformer>=0.3.2",
    "cython>=3.0.11",
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "gdown>=5.2.0",
    "gradio>=4.44.1",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "inflect>=7.4.0",
    "ipywidgets>=8.1.5",
    "librosa>=0.10.2.post1",
    "lightning>=2.0.0",
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "phonemizer>=3.3.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "rich>=13.8.1",
    "rootutils>=1.0.7",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch>=2.0.0",
    "torchaudio>=2.4.1",
    "torchmetrics>=0.11.4",
    "torchvision>=0.15.0",
    "unidecode>=1.3.8",
    "wget>=3.2",
]

[build-system]
requires = ["hatchling", "cython", "numpy"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matcha"]
